# openGL-test

./: .gitignore  .gitmodules  Animator.hpp  CMakeLists.txt  EBO.hpp  Enums.hpp  Shaders.cpp  Shaders.hpp  build.sh  callbacks.cpp  callbacks.hpp  debug.cpp  debug.hpp  main.cpp  main.hpp  run.sh  settings.cpp  settings.hpp  test.sh
Animator/: Animator.cpp  ArrayObject.cpp  CMakeLists.txt  Hitbox.cpp  Model.cpp
Animator/includes/: Animator.hpp  ArrayObject.hpp  Bone.hpp  Hitbox.hpp  Model.hpp
Blender/: bones.blend  bones.blend1  enemy.blend  floor.blend  sword.blend
Importer/: CMakeLists.txt  Converter.hpp  Debug.hpp  Importer.cpp  Importer.hpp  main.cpp  test.sh
Loader/: ArrayObject.cpp  Bone.cpp  CMakeLists.txt  Conversions.cpp  Importer.cpp  ProcessAnimations.cpp  ProcessBones.cpp  ProcessMesh.cpp  ProcessVAO.cpp  build.sh  debug.cpp  ldebug.cpp  run.sh
Loader/_external/assimp/: CMakeLists.txt
Loader/includes/: Animator.hpp  ArrayObject.hpp  Bone.hpp  Conversions.hpp  Importer.hpp  Model.hpp  ProcessAnimations.hpp  ProcessBones.hpp  ProcessMesh.hpp  ProcessVAO.hpp  Structs.hpp  debug.hpp  ldebug.hpp
Models/: 123.dae  5565.dae  B.dae  FLOOR2.fbx  YZ.dae  YupA.dae  a.dae  all.dae  bar.fbx  bones.dae  bones.fbx  bs.fbx  cube.dae  enemy.fbx  floor.fbx  height.fbx  junk.fbx  light.fbx  locscale.dae  locscale.fbx  locscaleZY.dae  longshit.dae  mid.dae  multi.dae  nobones.dae  noflip.dae  off.dae  player.fbx  rbones.fbx  rotate.dae  sbone.dae  shrink.dae  stretch.dae  sword.fbx  test.dae  untitled.x3d  up.dae  uprot.dae  wall.fbx  wat.dae  (+1 more)
Objects/: ArrayObject.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  Light.cpp  Light.hpp  Loader.hpp  Mesh.cpp  Mesh.hpp  Mob.cpp  Mob.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Playermodel.hpp  Shader.cpp  Shader.hpp  Sword.hpp  Uniforms.cpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Weapon.hpp
Objects/includes/: Camera.hpp  Light.hpp  Mob.hpp  Object.hpp  Player.hpp  Sword.hpp  Uniforms.hpp  Weapon.hpp
Physics/: CMakeLists.txt  Hitbox.cpp
Physics/includes/: Hitbox.hpp
Scene/: CMakeLists.txt  Camera.cpp  Scene.cpp  Shader.cpp  Spawner.cpp  Terrain.cpp  Uniforms.cpp
Scene/includes/: Camera.hpp  Octree.hpp  Quadtree.hpp  Scene.hpp  Shader.hpp  Spawner.hpp  Terrain.hpp  Uniforms.hpp
Shaders/: default.frag  default.geom  default.vert  hitbox.vert  light.frag  light.vert  wat.vert
UNSORTED/: Bone.cpp  Model.hpp
_Blender/: ENEMY.blend  FLOOR.blend  LIGHT.blend  LIGHT.blend1  PLAYER.blend  PLAYER.blend1  SWORD.blend1  bar.blend  bar.blend1  bones.blend  enemy.blend1  enemy2.blend  enemy2.blend1  floor.blend1  junk.blend  locscale.blend  new.blend  new.blend1  shrink.blend  sword.blend  untitled.blend  wall.blend  wall.blend1  wat.blend
playground/: acid.frag  functions.frag  warplines.frag
shaders/: default.frag  default.fragbac  default.vert  default.vertbac  light.vert
shaders/playground/: shader.frag
